--- a/buzz_lc.Rmd
+++ b/buzz_lc.Rmd
@@ -76,7 +76,7 @@ buzz_master_received <- left_join(buzz_master, buzz_received, by = "id") %>%
   # logical for grouping loot into TBC phased releases 
   mutate(offspec_yn = ifelse(offspec_yn == 1, "Y", "N")) %>%
   # recode received column to Y/N
-  left_join((loot_slot_details %>% select(item_name, Slot)), by = (c("item_name" = "item_name"))) %>% 
+  left_join((loot_slot_details %>% select(item_name, Slot, Boss = source_name)), by = (c("item_name" = "item_name"))) %>% 
   # join in item slot
   rename(Name = name, Class = class, Role = archetype, Spec = spec, 'Item ID' = item_id, 'Item Name' = item_name, 'Item Slot' = Slot,'Offspec (Y/N)' = offspec_yn, ` ` = wowhead_link, 'Date Received' = date_received)
   # final rename
@@ -93,7 +93,7 @@ buzz_master_received <- left_join(buzz_master, buzz_received, by = "id") %>%
 ## RShiny(?) dashboard or analytics looking at class/spec loot distrubution. Would be nice to include toggle buttons for MS>OS
 ## A box and whisker interactive viz for loot for each class with different specs colored/symbols is a good one
 
-buzz_received_table <- buzz_master_received %>% select(Name, Class, Role, Spec, `Item Name`, `Item Slot`, `Offspec (Y/N)`, ` `, `Date Received`, Phase)
+buzz_received_table <- buzz_master_received %>% select(Name, Class, Role, Spec, `Item Name`, Boss, `Item Slot`, `Offspec (Y/N)`, ` `, `Date Received`, Phase)
 #remove unnecesary columns
 
 datatable(buzz_received_table %>% 
@@ -104,9 +104,9 @@ datatable(buzz_received_table %>%
             options = list(pageLength = 40, 
                          #order = list(8, 'desc'), 
                          colReorder = TRUE, deferRender = TRUE, scrollY = 500, scroller = TRUE, order = 
-                           list(list(8, 'desc')),
+                           list(list(9, 'desc')),
                          searchCols = list(
-                           NULL, NULL, NULL, NULL, NULL, NULL, list(search = '["N"]'), NULL, NULL, list(search = '["Phase 3"]'))),
+                           NULL, NULL, NULL, NULL, NULL, NULL, list(search = '["N"]'), NULL, NULL, NULL, list(search = '["Phase 3"]'))),
             caption = "Export of Giant JSON blob on ThatsMyBiS. All BUZZ guilds characters and loot received.")
 
 ```
@@ -130,7 +130,7 @@ buzz_master_wishlist <- left_join(buzz_master, buzz_wishlist, by = "id") %>%
   # combine spec and spec label
   select(name, class, archetype, spec, item_id, parent_item_id, item_name, instance_name, 'Item Order', received_yn, wowhead_link, last_updated, pivot.note) %>%
   #limit columns
-  left_join((loot_slot_details %>% select(item_name, Slot)), by = (c("item_name" = "item_name"))) %>%
+  left_join((loot_slot_details %>% select(item_name, Slot, Boss = source_name)), by = (c("item_name" = "item_name"))) %>%
   # join item slot name
   mutate(across(c(name, class, archetype, spec, instance_name, received_yn, Slot), factor)) %>%
   # factor columns for better filtering in table
@@ -146,12 +146,12 @@ buzz_wishlist_table <- buzz_master_wishlist %>%  select(!c(`Item Order`))
 #remove column(s) for wishlist table
 
 datatable(buzz_wishlist_table %>% 
-            select(Name, Class, Role, Spec, `Item Name`, `Item Slot`, `Instance Name`, `Received (Y/N)`, ` `,`Last Updated`, Note) %>% 
+            select(Name, Class, Role, Spec, `Item Name`, Boss, `Item Slot`, `Instance Name`, `Received (Y/N)`, ` `,`Last Updated`, Note) %>% 
             # remove unnecessary columns for better table viewing
             distinct()
           , class = 'display cell-border stripe hover row-border', filter = 'top', extensions = c('ColReorder', 'Scroller', 'Buttons'), escape = FALSE, rownames = FALSE,
           options = list(pageLength = 25,colReorder = TRUE, deferRender = TRUE, scrollY = 500, scroller = TRUE, dom = 'Blfrtip', order = 
-                           list(list(9, 'desc')),
+                           list(list(10, 'desc')),
                         buttons = c('copy', 'csv', 'excel')),
           caption = "Export of Giant JSON blob on ThatsMyBiS. All BUZZ guilds characters with their wish lists for Phase 3.")
 ```
@@ -195,9 +195,9 @@ wishlist_aggregated <- buzz_wishlist_table %>%
 
 
 datatable(wishlist_aggregated %>% 
-            select(`Item Name`, Name, `Instance Name`, ` `, Class, Role) %>% 
+            select(`Item Name`, Boss, Name, `Instance Name`, ` `, Class, Role) %>% 
             # limit columns
-            group_by(`Item Name`, Name) %>%
+            group_by(`Item Name`, Boss, Name) %>%
             # group by columns to aggregate on
             summarise(Count = n()) %>% 
             # count rows
@@ -207,9 +207,9 @@ datatable(wishlist_aggregated %>%
             # retain wishlisted items over 2
             left_join((wishlist_aggregated %>% select(`Item Name`, `Item Slot`,`Instance Name`, ` `) %>% group_by(`Item Name`)), by = "Item Name") %>% 
             # reintroduce item data and wowhead link, remove duplicate rows
-            mutate(across(c(`Item Slot`),factor)) %>% 
+            mutate(across(c(`Item Slot`, Boss),factor)) %>% 
             #factor item slot
-            select(`Item Name`, `Item Slot`, Wishlisted, Count, `Instance Name`, ` `, ) %>% 
+            select(`Item Name`, Boss, `Item Slot`, Wishlisted, Count, `Instance Name`, ` `, ) %>% 
             # reduce columns
             distinct()
             # remove dupes
